--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
     },
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^9.0|^10.0"
+        "illuminate/support": "^9.0|^10.0",
+        "laravel/pint": "^1.10"
     },
     "require-dev": {
-        "laravel/pint": "^1.10",
         "nunomaduro/larastan": "^2.6",
         "phpunit/phpunit": "^9.6",
         "orchestra/testbench": "^7.0|^8.0"
